Added GameControllerTest and minor fixes